--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -1,7 +1,7 @@
 # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://help.github.com/actions/language-and-framework-guides/publishing-nodejs-packages
 
-name: Node.js Package
+name: Test and release
 
 on:
   push:
@@ -10,7 +10,8 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  test:
+    name: Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -20,20 +21,14 @@ jobs:
       - run: npm ci
       - run: npm run build
       - run: npm test
-
-  publish-gpr:
-    needs: build
+        
+  release:
+    name: Release
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 14
-          registry-url: https://npm.pkg.github.com/
-      - name: Version Bump
-        uses: opspresso/action-version@v0.2.5
-      - run: npm ci
-      - run: npm publish
-        working-directory: ./lib
+      - uses: fnkr/github-action-ghr@v1
+        if: startsWith(github.ref, 'refs/tags/')
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          GHR_COMPRESS: xz
+          GHR_PATH: lib/
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
