--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://help.github.com/actions/language-and-framework-guides/publishing-nodejs-packages
 
-name: Test and release
+name: Test
 
 on:
   push:
@@ -21,15 +21,3 @@ jobs:
       - run: npm ci
       - run: npm run build
       - run: npm test
-        
-  release:
-    name: Release
-    needs: [test]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: fnkr/github-action-ghr@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        env:
-          GHR_COMPRESS: xz
-          GHR_PATH: lib/
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
